# ImageProcessing-SVM

./: #svmclassification.hpp#  .#svmclassification.hpp  .gitignore  CMakeLists.txt  CMakeLists.txt~  Description.txt  Makefile  README.md  READMEFIRST.txt  calculateHistogram.txt  color.h  dataset.cpp  dataset.h  header.hpp  histogramProcessor.cpp  histogramProcessor.hpp  histogramViewer.cpp  histogramViewer.hpp  imageProcessing.cpp  imageProcessing.hpp  main.cpp  results.txt  resultsAll.txt  svmclassification.cpp  svmclassification.hpp  testDataset.cpp  testHistogramProcessor.cpp  testSVM.cpp  trainSVM.txt  visualizeHistogram.txt
dataset/: description.txt
dataset/test/: datasetinfo.txt
